--- a/templates/default/footerLink/contact.html.twig
+++ b/templates/default/footerLink/contact.html.twig
@@ -52,22 +52,22 @@
                 <div class="media contact-info">
                     <span class="contact-info__icon"><i class="ti-home"></i></span>
                     <div class="media-body">
-                        <h3>Buttonwood, California.</h3>
-                        <p>Rosemead, CA 91770</p>
+                        <h3>Paris, France.</h3>
+                        <p>123, Rue de la chance, 75020</p>
                     </div>
                 </div>
                 <div class="media contact-info">
                     <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                     <div class="media-body">
-                        <h3>00 (440) 9865 562</h3>
-                        <p>Mon to Fri 9am to 6pm</p>
+                        <h3>+336 66 66 66 66</h3>
+                        <p>Lundi au vendredi - 9:00 à 18:00</p>
                     </div>
                 </div>
                 <div class="media contact-info">
                     <span class="contact-info__icon"><i class="ti-email"></i></span>
                     <div class="media-body">
-                        <h3>support@colorlib.com</h3>
-                        <p>Send us your query anytime!</p>
+                        <h3>contact@afromed.co</h3>
+                        <p>Pour toutes questions !</p>
                     </div>
                 </div>
             </div>
