--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -9,7 +9,7 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-7 col-md-6">
                         <div class="slider_text">
-                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">Trouve le médecin pour tes cousins</h3>
+                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">   </h3>
                             <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">
                                 <a href="#" class="boxed-btn3">Trouver un médecin</a>
                             </div>
